--- a/Back-end-namo/.env
+++ b/Back-end-namo/.env
@@ -1,3 +1,4 @@
+DATABASE_URL=postgresql://postgres:[@Dgs3jpm5]@db.sznwdqtsrlydsopmjjss.supabase.co:5432/postgres
 DB_USER=postgres
 DB_HOST=localhost
 DB_DATABASE=our_life
